k8s/container-registry-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: container-image-registry-pod
  namespace: container-image-registry
  labels:
    app: container-image-registry
spec:
  containers:
  - name: registry
    image: registry:2.6.2
    volumeMounts:
    - name: reg-vol
      mountPath: "/var/lib/registry"
    - name: certs-vol
      mountPath: "/certs"
      readOnly: true
    - name: auth-vol
      mountPath: "/auth"
      readOnly: true
  volumes:
  - name: reg-vol
    persistentVolumeClaim:
      claimName: container-image-registry-pvc
  - name: certs-vol
    secret:
      secretName: container-image-registry-certs-secret
  - name: auth-vol
    secret:
      secretName: container-image-registry-auth-secret
---
apiVersion: v1
kind: Service
metadata:
  name: container-image-registry
  namespace: container-image-registry
spec:
  selector:
    app: container-image-registry
  ports:
  - port: 31000
    targetPort: 31000
